Added global hotkey & more Definition cases.

--- a/QuickLinks.csproj
+++ b/QuickLinks.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="HotKeyManager.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Popup.cs">
       <SubType>Form</SubType>
